# FluxTune

./: ALTERNATIVE_SOFTWARE_CONCEPTS.md  ARCHITECTURE_ANALYSIS.md  ARDUINO_DEPENDENCY_REMOVAL.md  CMakeLists.txt  CODE_REVIEW_SUMMARY.md  COMMITS_FOR_REFERENCE.md  COMMIT_SUMMARY.md  CRITICAL_BUG_FIX_PATTERN.md  DEVELOPMENT.md  DTMF_RESOURCE_TEST_STATUS.md  FEATURE_IDEAS.md  HARDWARE_IDEAS.md  JAMMER_INTEGRATION_COMPLETE.md  Makefile  NOTES.txt  NUMBERS_STATION_ANALYSIS.md  README.md  REALIZER_BASE_CLASS_REMOVAL_COMPLETE.md  REALIZER_POOL_RENAME_COMPLETE.md  RESOURCE_TEST_README.txt  ROADMAP.md  SILENT_FREQUENCY_EXPERIMENTATION.md  SIMNUMBERS_ENHANCEMENT_SUMMARY.md  STATION_CONFIGURATION.md  TEST_COVERAGE_SUMMARY.md  TODO.md  WORKING_CONFIGURATIONS.md  baudot_test.cpp  debug_cq_format.cpp  debug_exact_test.cpp  debug_include_order.cpp  debug_morse.cpp  debug_rtty_internal.cpp  debug_rtty_patterns.cpp  debug_rtty_timing.cpp  memory_analysis.cpp  memory_analysis_simple.cpp  platformio.ini  ram_clear_breakdown.txt  ram_usage.txt  (+15 more)
deprecated/: README.md  chime.cpp  morse.cpp
docs/: HARDWARE.md  OPERATION.md  TECHNICAL.md
examples/: field_day_config.cpp
include/: async_beacon.h  async_jammer.h  async_modulator.h  async_morse.h  async_pager.h  async_rtty.h  billboards_handler.h  buffers.h  contrast_handler.h  displays.h  dtmf_tones.h  encoder_handler.h  event_dispatcher.h  hardware.h  led_handler.h  leds.h  mode.h  mode_handler.h  morse.h  multi_realization.h  option.h  option_handler.h  options.h  options_handler.h  options_presenter.h  play_data.h  play_views.h  realization.h  realization_pool.h  realizer.h  realizer_pool.h  saved_data.h  seeding.h  signal_meter.h  sim_beacon.h  sim_jammer.h  sim_numbers.h  sim_pager.h  sim_rtty.h  sim_signal.h  (+12 more)
native/: mock_arduino.cpp  mock_arduino.h  mock_eeprom.cpp  mock_eeprom.h  mock_encoder.h  mock_ht16k33disp.cpp  mock_ht16k33disp.h  mock_wire.cpp  (+7 more)
(+107 files in other folders)
